commited client fullscope changes now remove old proofs that are no longer needed